--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Java 2022 07 07</title>
     <!-- <script src="./js/main.js" defer></script> -->
-    <script src="./js/swich.js" defer></script>
+    <!-- <script src="./js/swich.js" defer></script> -->
+    <!-- <script src="./js/while.js" defer></script> -->
+    <!-- <script src="./js/forloop.js" defer></script> -->
+    <script src="./js/kauliukas.js" defer></script>
   </head>
   <body>
     <h1>Java Script 3 paskaita</h1>
