--- a/CAO/index.html
+++ b/CAO/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Java Script 07 07 2022</title>
-    <!-- <script src="./js/main.js" defer></script> -->
+    <script src="./js/main.js" defer></script>
     <script src="./js/cao.js" defer></script>
   </head>
   <body>
